# RickAndMortyBatch

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
config/: config.json
include/: APIClient.h  APILoader.h  BatchProcessor.h  CharacterProcessor.h  Config.h  DataBaseManager.h  DataBaseMenu.h  EpisodeProcessor.h  LocationProcessor.h  Logger.h  LoggerMenu.h  Menu.h  ValidFields.h
include/API/: APIClient.h
include/Batch/: BatchProcessor.h
include/DataBase/: DataBaseManager.h  DataBaseMenu.h
include/Helpers/: Colors.h
include/Logger/: Logger.h  LoggerMenu.h
include/Menu/: Menu.h
include/Processors/: LocationProcessor.h
src/: APIClient.cpp  APILoader.cpp  BatchProcessor.cpp  CharacterProcessor.cpp  Config.cpp  DataBaseManager.cpp  DataBaseMenu.cpp  EpisodeProcessor.cpp  LocationProcessor.cpp  Logger.cpp  LoggerMenu.cpp  Menu.cpp  main.cpp
src/API/: APILoader.cpp
src/Batch/: BatchProcessor.cpp
src/DataBase/: DataBaseManager.cpp  DataBaseMenu.cpp
src/Logger/: Logger.cpp  LoggerMenu.cpp
src/Menu/: Colors.cpp  Menu.cpp
src/Processors/: EpisodeProcessor.cpp  LocationProcessor.cpp
